[gd_scene load_steps=7 format=3 uid="uid://dhhpwwmoo8bwq"]

[ext_resource type="Script" uid="uid://cmwb0xomnmipv" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://ulutd5rqohpg" path="res://scenes/snek.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://3bretq8smwia" path="res://scenes/hud.tscn" id="3_sugp2"]
[ext_resource type="Script" uid="uid://gxagw548l4ud" path="res://scripts/food_manager.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://brxig4gnqxov1" path="res://scripts/powerup_manager.gd" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://fbvdjq64klcd" path="res://scenes/speed_up_power.tscn" id="6_tefeu"]

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")

[node name="snek" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(10, 324)

[node name="HUD" parent="." instance=ExtResource("3_sugp2")]

[node name="FoodManager" type="Node2D" parent="."]
script = ExtResource("4_jyhfs")

[node name="PowerupManager" type="Node2D" parent="."]
script = ExtResource("5_tbgi4")
powerup_scenes = Array[PackedScene]([ExtResource("6_tefeu")])

[connection signal="appl_eaten" from="snek" to="." method="_on_appl_eaten"]
[connection signal="snek_death" from="snek" to="." method="_on_snek_death"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
